docs/envoy/v1.13.0/_sources/api-v3/config/resource_monitor/fixed_heap/v2alpha/fixed_heap.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/resource_monitor/fixed_heap/v2alpha/fixed_heap.proto:

Fixed heap
==========

.. _extension_envoy.resource_monitors.fixed_heap:


This extension may be referenced by the qualified name *envoy.resource_monitors.fixed_heap*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension does not operate on the data plane and hence is intended to be robust against untrusted traffic.


.. _envoy_v3_api_msg_config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig:

config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig
----------------------------------------------------------

`[config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/resource_monitor/fixed_heap/v2alpha/fixed_heap.proto#L16>`_

The fixed heap resource monitor reports the Envoy process memory pressure, computed as a
fraction of currently reserved heap memory divided by a statically configured maximum
specified in the FixedHeapConfig.

.. code-block:: json

  {
    "max_heap_size_bytes": "..."
  }

.. _envoy_v3_api_field_config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig.max_heap_size_bytes:

max_heap_size_bytes
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  

